# CSIT-214

./: .gitignore  Final Report.docx  Justification_for_project_selection.docx  MIlestone Report 1.docx  MIlestone Report 2.docx  Milestone Reports.docx  Project Closing.docx  README.md  Risk_Management_Final.docx  WBS Dictionary.xlsx  WBS Info.docx  WBS-resources-incomplete.pod  WBS.mpp  WSM.xlsx  delegated_tasks.docx  logs.tex
Implementation/: CHANGELOG.md  DesignChoicesJustification.md  Implementation.cabal  README.md
Implementation/app/: Basics.hs  BookFlight.hs  BookServices.hs  Css.hs  Db.hs  EmployeeAct.hs  Home.hs  Login.hs  Main.hs  MyFlights.hs  SiteBuilders.hs  UserManagement.hs  Util.hs
Minutes/: 2.org  4.org  7.org
Presentation/: beamercolorthemeclean.sty  main.tex  speech.txt
