cabal-version: 2.4
name: Implementation
version: 0.1.0.0
author: Isaac Bankier
maintainer: isaacbankier@protonmail.com

extra-source-files: CHANGELOG.md

executable Implementation
    main-is: Main.hs
    build-depends: base ^>=4.14.3.0
                 , Spock ^>= 0.14.0.0
                 , text ^>= 2.0
                 , mtl ^>= 2.2.2
                 , http-types ^>= 0.12.3
                 , lucid ^>= 2.11.0
                 , Spock-lucid ^>= 0.4.0.1
                 , sqlite-simple ^>= 0.4.18.0
                 , lens ^>= 5.1
                 , hvect ^>= 0.4.0.1
    hs-source-dirs: app
    other-modules: Db
    default-language: Haskell2010
